# latent-diffusion

./: CLIP.md  DATA.md  LDM_TRAINER.md  README.md  VAE.md  pyproject.toml
bash/: filter_dataset.sh  train_VAE.sh  train_hf_VAE.sh  train_ldm.sh
ldm/: data.py  metrics.py  scheduling_ddpm.py  unet.py  utils.py
ldm/tools/: download_datasets.py  filter_dataset.py  hf_train_autoencoderkl.py  hf_train_diffusion.py  prepare_webdataset.py  prepare_webdataset2.py  scheduling_ddpm.py  test_installation.py  train_autoencoderkl.py  train_latent_diffusion.py
